--- a/logback/loghub/pom.xml
+++ b/logback/loghub/pom.xml
@@ -3,12 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>loggers</artifactId>
-        <groupId>com.daemon</groupId>
+        <artifactId>logback</artifactId>
+        <groupId>com.daemon.loggers</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.daemon.loggers</groupId>
-    <artifactId>common</artifactId>
+    <groupId>com.daemon.loggers.logback</groupId>
+    <artifactId>loghub</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.daemon.loggers</groupId>
+            <artifactId>loghub</artifactId>
+        </dependency>
+    </dependencies>
 </project>
