--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <packaging>pom</packaging>
     <version>1.0</version>
     <modules>
-        <module>log4j2</module>
         <module>common</module>
+        <module>loghub</module>
+        <module>log4j2</module>
+        <module>logback</module>
     </modules>
 
     <properties>
@@ -55,6 +57,11 @@
             <dependency>
                 <groupId>com.daemon.loggers</groupId>
                 <artifactId>common</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.daemon.loggers</groupId>
+                <artifactId>loghub</artifactId>
                 <version>1.0</version>
             </dependency>
         </dependencies>
