--- a/logback/loghub/pom.xml
+++ b/logback/loghub/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.daemon.loggers.logback</groupId>
     <artifactId>loghub</artifactId>
+    <version>1.0-SANPSHOT</version>
 
     <dependencies>
         <dependency>
